# ChangeLog for kde-base/libkmahjongg
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/libkmahjongg/ChangeLog,v 1.7 2008/05/16 00:46:05 ingmar Exp $

*libkmahjongg-4.0.4 (15 May 2008)

  15 May 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  +libkmahjongg-4.0.4.ebuild:
  Added KDE 4.0.4 version of libkmahjongg. Thanks to Jorge Manuel B. S.
  Vicetto.

*libkmahjongg-4.0.3 (03 Apr 2008)

  03 Apr 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +libkmahjongg-4.0.3.ebuild:
  Version bump to KDE 4.0.3. This is still not intended for mainstream so DO
  NOT KEYWORD IT without talking to the KDE herd first.

  20 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -libkmahjongg-4.0.1.ebuild:
  Old.

*libkmahjongg-4.0.2 (10 Mar 2008)

  10 Mar 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +libkmahjongg-4.0.2.ebuild:
  Version bump to KDE 4.0.2

  17 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -libkmahjongg-4.0.0.ebuild:
  Spring cleaning

*libkmahjongg-4.0.1 (06 Feb 2008)

  06 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +libkmahjongg-4.0.1.ebuild:
  Version bump to KDE 4.0.1.

*libkmahjongg-4.0.0 (18 Jan 2008)

  18 Jan 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  +files/libkmahjongg-4.0.0-link.patch, +metadata.xml,
  +libkmahjongg-4.0.0.ebuild:
  Added KDE 4.0.0's libkmahjongg.
