@@ -4,15 +4,17 @@ Hash: SHA1
 DIST kdebase-runtime-4.0.2.tar.bz2 48302290 RMD160 de02a4c3d92afb6630794c1e082a752f0dc0dc03 SHA1 9a84a0ba747cdf487e12f0c108632b6fe3c3038a SHA256 5af3cae9ddc2c2dddab42efc6baa89177c4793b6522d61c77afc8b4b70b34ba2
 DIST kdebase-runtime-4.0.3.tar.bz2 48316852 RMD160 46ef2fae9c6e311b57a61258ca3484b0697d6e38 SHA1 ed4be6d395ec98bfe735c7c93e38ebfacab8c16e SHA256 4e349bbb9ac31d266cd82735cd1414df75ed212df84afea4369100ebfbaede28
 DIST kdebase-runtime-4.0.4.tar.bz2 48319543 RMD160 bb8d03488ba69107d822c4bb885d938be1741f62 SHA1 18388e992c945d9245c7080eedaa1fdc226f1701 SHA256 c81e7069ec8b9869667b18aee8c4188f52ff68cca776afd93b6713aa85f103d9
+DIST kdebase-runtime-4.0.5.tar.bz2 48424795 RMD160 a83b8ec98bbd03812baa0794e9aaa8068a434dd5 SHA1 e8b15e2f134c7bd1555cd9f4759e5e5efd3d8073 SHA256 d8069a63b3006f9961e79cd74c6071d8e21f9258fd3a4dffeb0c1a5aa991f022
 EBUILD nepomuk-4.0.2.ebuild 650 RMD160 a4a638e89d1bd29182c0e2e738256aa9f1bcb2c3 SHA1 ea805e9267e9d7e7e01c82454dfdce8a6e332419 SHA256 fb52a44081e2ae8bf00828e0810d637819635ad902613684c7219e33c7d45325
 EBUILD nepomuk-4.0.3.ebuild 650 RMD160 30326e3c4a3aefab03c067b4357c9e3295eda0a2 SHA1 26122d453f566cff8a2155af5c25e2833b4e3f1e SHA256 0fa279a33e39c8e669e313280fcdccd18e14a9ad5be9ecc0210f418323f240d8
 EBUILD nepomuk-4.0.4.ebuild 646 RMD160 3f05b181cea064920b39fb8653d147d7fb29fcf0 SHA1 d1a21245e7f751a2514eee2fe0f1958b889b08fc SHA256 5d81aa774d5f0535e8c075ac674274453f519a970b58fbefcc7905b98f49028e
-MISC ChangeLog 1378 RMD160 10c536fefd92a5b133fd178129b73469617ac6c7 SHA1 024b58051cce2fe2e646a6331c8608e9d9b2ca9b SHA256 24eaddabc3d9c99935d56bc90d8e479c43941b36788e1c3225c1e0609126d2c8
+EBUILD nepomuk-4.0.5.ebuild 652 RMD160 8b656534bcde074aa7a3c5ef2ebaf50d29539d3c SHA1 ed60dfdd3bdb29c56211bfc249622edf305032c0 SHA256 5274e54f3f809ea6c8d7b23b1aa43503a26fe1af51070601c469f3783a43fd32
+MISC ChangeLog 1537 RMD160 e5b21bea0d9586c5e6e5f984f1150411360ee666 SHA1 0a54d6945c1b852e166c03badae2c49959fb6473 SHA256 3b39d1e40a0ae851a1199dde2f3cacd7d9124af5296f9bb22baca0b4b98f7ae2
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkg/uTIACgkQfxJ68Jl1NeHmAgCgz1Q6H1TWQtVnqN79UIOTCPO5
-tpoAnA1LxnPLeRggTQoQHdEYZcL0kLh9
-=Oeer
+iEYEARECAAYFAkhIbHMACgkQKfQzuokD2Iq3TwCg7EZj8JlNzHVOYFj+g7Bqw70U
+PyAAoLeb/8r6y/ZQbsYwqkhuj0vuQdg1
+=nnYw
 -----END PGP SIGNATURE-----
